# expo-precision-metronome

./: .editorconfig  .eslintrc.js  .gitignore  .npmignore  .prettierignore  .prettierrc  .swiftlint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  babel.config.js  eslint.config.js  expo-module.config.json  jest.config.js  package-lock.json  package.json
.github/: CODEOWNERS  SECURITY.md  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: common_pull_request.md
.github/workflows/: ci-android.yml  ci-compliance.yml  ci-ios.yml  ci-js.yml  ci.yml  labeler.yml  labels.yml  release.yml
.husky/: pre-push
LICENSES/: MIT.txt
android/: build.gradle
android/src/main/cpp/: BeatScheduler.h  CMakeLists.txt  ClickSynthesizer.h  MetronomeEngine.cpp  MetronomeEngine.h  jni_bridge.cpp
example/: .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/android/: settings.gradle
example/ios/: Podfile
ios/: BeatAccent.swift  BeatScheduler.swift  ClickSynthesizer.swift  ExpoPrecisionMetronome.podspec  ExpoPrecisionMetronomeModule.swift  ExpoPrecisionMetronomeView.swift  MetronomeEngine.swift  Package.swift  SoundPreset.swift
ios/Tests/: ExpoPrecisionMetronomeTests.swift
mocks/: ExpoPrecisionMetronome.js
src/: ExpoPrecisionMetronome.types.ts  ExpoPrecisionMetronomeModule.ts  ExpoPrecisionMetronomeModule.web.ts  ExpoPrecisionMetronomeView.tsx  ExpoPrecisionMetronomeView.web.tsx  index.ts
(+15 files in other folders)
